feat: gerenciamento de pedidos e veículos
