# backend/src/main/java/br/pucminas/aluguelcarros/dto/response/AutomovelResponseDTO.java
@@ -1,7 +1,10 @@
 package br.pucminas.aluguelcarros.dto.response;
 
+import br.pucminas.aluguelcarros.enums.AgenteTipo;
 import br.pucminas.aluguelcarros.enums.AutomovelStatus;
 import io.micronaut.serde.annotation.Serdeable;
+
+import java.math.BigDecimal;
 
 @Serdeable
 public record AutomovelResponseDTO(
@@ -11,6 +14,9 @@ public record AutomovelResponseDTO(
         Integer ano,
         String marca,
         String modelo,
+        BigDecimal diaria,
+        Long agentId,
+        AgenteTipo agentType,
         AutomovelStatus status
 ) {
 }
